2008-10-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:

	Do not crash when an invalid path has been provided, show an error
	and exit instead. Fixes bug #792.
	
2008-10-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/Database.py:

	Create the index for file_name on table tree when creating the
	table and don't remove it.
	
2008-10-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:

	Several performance improvements in the paths handling:
	  - Only store the file_id in the file cache, we don't actually
	    need to store the whole file object
	  - Look only for id instead of * in the tree table
	  - Create an index for file_name on table tree. It drastically
	    improves the performance of the whole process.
	Profile statements have been added too for debugging. 
	
2008-10-01  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/AsyncQueue.py:
	* pycvsanaly2/Parser.py:

	Use a thread to read the log from the repository log command
	output so that the log is read into memory as soon as possible and
	we don't depend on the network most of the time.
	
2008-10-01  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Changed each topdir path to the path on its first revision.

2008-09-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:

	Fix a crash due to an invalid DBFile constructor invocation.
	
2008-09-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not get metrics for all the repositories of the database, but
	for the given one only.
	
2008-09-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:
	* pycvsanaly2/extensions/FileTypes.py:

	Work only over the files of the given repository.
	